--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,42 @@ nav {
     background-color: #9e2e2e;
 
   }
+  /* Add the following CSS code */
+.service-item {
+  position: relative;
+}
+
+.service-item:hover .overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.service-item .overlay {
+  display: none;
+}
+
+.service-item .overlay button {
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.service-item .overlay button:hover {
+  text-decoration: underline;
+}
+
 
   footer h2{
     text-align: center;
