--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ body{
 font-family: 'Montserrat', sans-serif;
 font-family: 'Ubuntu', sans-serif;
 }
+.logo{
+  font-family: 'Kanit', sans-serif;
+  margin-bottom: 0;
+}
 
 header{
     background-color: black;
@@ -18,6 +22,7 @@ header h2{
 nav {
     background-color: #000000;
     padding: 10px;
+    display: flex;
   }
   
   nav ul {
@@ -33,14 +38,17 @@ nav {
   
   nav ul li a {
     display: block;
-    padding: 10px;
+    padding: 6px 10px;
     text-decoration: none;
     color: #ffffff;
+   list-style: none;
 
   }
   
   nav ul li a:hover {
-    text-decoration: underline;
+    border-bottom: 3px solid rgb(255, 0, 0);
+    padding-bottom: 4px;
+    transition: all 0.25s ease-in-out;
   }
   
   .hero img{
@@ -130,6 +138,9 @@ nav {
   }
   footer p{
     text-align: center;
+  }
+  footer img{
+    margin-left: 10px;
   }
 
   /* Contact  */
